--- a/index.scss
+++ b/index.scss
@@ -150,7 +150,7 @@
 	padding: 0;
 	margin: 0;
 	padding-top: 100px;
-	.about-left {
+	.analyze-left {
 		h5 {
 			color: gray;
 			font-size: 16px;
@@ -192,7 +192,7 @@
 			color: white;
 		}
 	}
-	.about-right {
+	.analyze-right {
 		height: 500px;
 	}
 }
@@ -266,10 +266,10 @@
 	margin: 0;
 	padding-top: 100px;
 	background-color: #404258;
-	.about-left {
+	.community-left {
 		h1 {
 			font-style: normal;
-			font-weight: 600;
+			font-weight: 550;
 			font-size: 40px;
 			line-height: 60px;
 
@@ -280,7 +280,7 @@
 			}
 		}
 	}
-	.about-right {
+	.community-right {
 		button {
 			width: 200px;
 			height: 60px;
